demo/asset/main.css
body{
    margin:0;
    padding:0;
    color: #f4f4f4;
    font-family: verdana,serif;
    font-size: 25px;
    text-transform: uppercase;
}

section{
    height: 500px;
    background: #DF5A49;
}

section:nth-child(1){
    background: #334D5C;
}

section:nth-child(3){
    background: #45B29D;
}

section:nth-child(5){
    background: #EFC94C;
}

section:nth-child(7){
    background: #E27A3F;
}

nav{
    background: black;
    padding-left:10px;
}

